--- a/ntcore/src/generate/main/dotnet/GenericPublisher.cs.jinja
+++ b/ntcore/src/generate/main/dotnet/GenericPublisher.cs.jinja
@@ -6,27 +6,29 @@
 
 namespace NetworkTables;
 
-/** NetworkTables generic publisher. */
 public partial interface IGenericPublisher
 {
 {% for t in types %}
-  /**
-   * Publish a new value.
-   *
-   * @param value value to publish
-   * @param time timestamp; 0 indicates current NT time should be used
-   * @return False if the topic already exists with a different type
-   */
-  bool Set{{ t.TypeName }}({{ t.dotnet.ValueType }} value, long time);
+    /// <summary>
+    /// Publish a new value.
+    /// </summary>
+    /// <param name="value">value to publish</param>
+    /// <param name="time">timestamp; 0 indicates current NT time should be used</param>
+    /// <returns>False if the topic already exists with a different type</returns>
+    bool Set{{ t.TypeName }}({{ t.dotnet.ValueType }} value, long time);
 
-  bool Set{{ t.TypeName }}({{ t.dotnet.ValueType }} value);
+    /// <summary>
+    /// Publish a new value.
+    /// </summary>
+    /// <param name="value">value to publish</param>
+    /// <returns>False if the topic already exists with a different type</returns>
+    bool Set{{ t.TypeName }}({{ t.dotnet.ValueType }} value);
 
-  /**
-   * Sets the entry's value if it does not exist.
-   *
-   * @param defaultValue the default value to set
-   * @return False if the entry exists with a different type
-   */
-  bool SetDefault{{ t.TypeName }}({{ t.dotnet.ValueType }} defaultValue);
+    /// <summary>
+    /// Sets the entry's value if it does not exist.
+    /// </summary>
+    /// <param name="defaultValue">the default value  to set</param>
+    /// <returns>False if the entry already exists with a different type</returns>
+    bool SetDefault{{ t.TypeName }}({{ t.dotnet.ValueType }} defaultValue);
 {% endfor %}
 }
