--- a/ntcore/src/generate/main/dotnet/NetworkTable.cs.jinja
+++ b/ntcore/src/generate/main/dotnet/NetworkTable.cs.jinja
@@ -9,6 +9,11 @@ namespace NetworkTables;
 public sealed partial class NetworkTable
 {
 {%- for t in types %}
+    /// <summary>
+    /// Gets a {{ t.dotnet.ValueType }} topic.
+    /// </summary>
+    /// <param name="name">topic name</param>
+    /// <returns>{{ t.TypeName }}Topic</returns>
     public {{ t.TypeName }}Topic Get{{ t.TypeName }}Topic(string name)
     {
         return Instance.Get{{ t.TypeName }}Topic($"{m_pathWithSep}{name}");
