--- a/ntcore/src/generate/main/dotnet/Publisher.cs.jinja
+++ b/ntcore/src/generate/main/dotnet/Publisher.cs.jinja
@@ -8,63 +8,55 @@ using System;
 
 namespace NetworkTables;
 
-/** NetworkTables {{ TypeName }} publisher. */
-public interface I{{ TypeName }}Publisher : IPublisher {
-  /**
-   * Get the corresponding topic.
-   *
-   * @return Topic
-   */
-
-  new {{ TypeName }}Topic Topic { get; }
+/// <summary>
+/// NetworkTables {{ TypeName }} publisher.
+/// </summary>
+public interface I{{ TypeName }}Publisher : IPublisher
+{
+    /// <summary>
+    /// Gets the corresponding topic.
+    /// </summary>
+    new {{ TypeName }}Topic Topic { get; }
 
 {% if dotnet.IsArray %}
-  /**
-   * Publish a new value using current NT time.
-   *
-   * @param value value to publish
-   */
-  void Set(ReadOnlySpan<{{ dotnet.BaseType }}> value);
+    /// <summary>
+    /// Publish a new value using the current NT time.
+    /// </summary>
+    /// <param name="value">value to publish</param>
+    void Set(ReadOnlySpan<{{ dotnet.BaseType }}> value);
 
-  /**
-   * Publish a new value.
-   *
-   * @param value value to publish
-   * @param time timestamp; 0 indicates current NT time should be used
-   */
-  void Set(ReadOnlySpan<{{ dotnet.BaseType }}> value, long time);
+    /// <summary>
+    /// Publish a new value.
+    /// </summary>
+    /// <param name="value">value to publish</param>
+    /// <param name="time">timestamp; 0 indicates current NT time should be used</param>
+    void Set(ReadOnlySpan<{{ dotnet.BaseType }}> value, long time);
 
-  /**
-   * Publish a default value.
-   * On reconnect, a default value will never be used in preference to a
-   * published value.
-   *
-   * @param value value
-   */
-  void SetDefault(ReadOnlySpan<{{ dotnet.BaseType }}> value);
+    /// <summary>
+    /// Publish a default value. On reconnect, a default value will never be used
+    /// in prference to a published value
+    /// </summary>
+    /// <param name="value">value</param>
+    void SetDefault(ReadOnlySpan<{{ dotnet.BaseType }}> value);
 {% else %}
-  /**
-   * Publish a new value using current NT time.
-   *
-   * @param value value to publish
-   */
-  void Set({{ dotnet.ValueType }} value);
+    /// <summary>
+    /// Publish a new value using the current NT time.
+    /// </summary>
+    /// <param name="value">value to publish</param>
+    void Set({{ dotnet.ValueType }} value);
 
-  /**
-   * Publish a new value.
-   *
-   * @param value value to publish
-   * @param time timestamp; 0 indicates current NT time should be used
-   */
-  void Set({{ dotnet.ValueType }} value, long time);
+    /// <summary>
+    /// Publish a new value.
+    /// </summary>
+    /// <param name="value">value to publish</param>
+    /// <param name="time">timestamp; 0 indicates current NT time should be used</param>
+    void Set({{ dotnet.ValueType }} value, long time);
 
-  /**
-   * Publish a default value.
-   * On reconnect, a default value will never be used in preference to a
-   * published value.
-   *
-   * @param value value
-   */
-  void SetDefault({{ dotnet.ValueType }} value);
+    /// <summary>
+    /// Publish a default value. On reconnect, a default value will never be used
+    /// in prference to a published value
+    /// </summary>
+    /// <param name="value">value</param>
+    void SetDefault({{ dotnet.ValueType }} value);
 {% endif -%}
 }
