--- a/ntcore/src/generate/main/dotnet/Subscriber.cs.jinja
+++ b/ntcore/src/generate/main/dotnet/Subscriber.cs.jinja
@@ -6,72 +6,62 @@
 
 namespace NetworkTables;
 
-/** NetworkTables {{ TypeName }} subscriber. */
-public interface I{{ TypeName }}Subscriber : ISubscriber {
-  /**
-   * Get the corresponding topic.
-   *
-   * @return Topic
-   */
+/// <summary>
+/// NetworkTables {{ TypeName}} subscriver.
+/// </summary>
+public interface I{{ TypeName }}Subscriber : ISubscriber
+{
+    /// <summary>
+    /// Gets the corresponding topic.
+    /// </summary>
+    new {{ TypeName }}Topic Topic { get; }
 
-  new {{ TypeName }}Topic Topic { get; }
+    /// <summary>
+    /// Get the last published value.
+    /// If no value has been published, returns the stored default value.
+    /// </summary>
+    /// <returns>value</returns>
+    {{ dotnet.ValueType }} Get();
 
-  /**
-   * Get the last published value.
-   * If no value has been published, returns the stored default value.
-   *
-   * @return value
-   */
-  {{ dotnet.ValueType }} Get();
+    /// <summary>
+    /// Get the last published value.
+    /// If no value has been published, returns the passed default value.
+    /// </summary>
+    /// <param name="defaultValue">default value to return if no value has been published</param>
+    /// <returns>value</returns>
+    {{ dotnet.ValueType }} Get({{ dotnet.ValueType }} defaultValue);
 
-  /**
-   * Get the last published value.
-   * If no value has been published, returns the passed defaultValue.
-   *
-   * @param defaultValue default value to return if no value has been published
-   * @return value
-   */
-  {{ dotnet.ValueType }} Get({{ dotnet.ValueType }} defaultValue);
+    /// <summary>
+    /// Get the last published value along with its timestamp.
+    /// If no value has been published, returns the stored default value and a timestamp of 0.
+    /// </summary>
+    /// <returns>timestamped value</returns>
+    TimestampedObject<{{ dotnet.ValueType }}> GetAtomic();
 
-  /**
-   * Get the last published value along with its timestamp
-   * If no value has been published, returns the stored default value and a
-   * timestamp of 0.
-   *
-   * @return timestamped value
-   */
-  TimestampedObject<{{ dotnet.ValueType }}> GetAtomic();
+    /// <summary>
+    /// Get the last published value along with its timestamp.
+    /// If no value has been published, returns the passed default value and a timestamp of 0.
+    /// </summary>
+    /// <param name="defaultValue">default value to return if no value has been published</param>
+    /// <returns>timestamped value</returns>
+    TimestampedObject<{{ dotnet.ValueType }}> GetAtomic({{ dotnet.ValueType }} defaultValue);
 
-  /**
-   * Get the last published value along with its timestamp
-   * If no value has been published, returns the passed defaultValue and a
-   * timestamp of 0.
-   *
-   * @param defaultValue default value to return if no value has been published
-   * @return timestamped value
-   */
-  TimestampedObject<{{ dotnet.ValueType }}> GetAtomic({{ dotnet.ValueType }} defaultValue);
+    /// <summary>
+    /// Get an array of all value changes since the last call to ReadQueue.
+    /// Also provides a timestamp for each value.
+    /// </summary>
+    /// <remarks>
+    /// The "poll storage" subscribe option can be used to set the queue depth.
+    /// </remarks
+    /// <returns>Array of timestamped values; emptry if no new changes</returns>
+    TimestampedObject<{{ dotnet.ValueType }}>[] ReadQueue();
 
-  /**
-   * Get an array of all value changes since the last call to readQueue.
-   * Also provides a timestamp for each value.
-   *
-   * <p>The "poll storage" subscribe option can be used to set the queue
-   * depth.
-   *
-   * @return Array of timestamped values; empty array if no new changes have
-   *     been published since the previous call.
-   */
-  TimestampedObject<{{ dotnet.ValueType }}>[] ReadQueue();
-
-  /**
-   * Get an array of all value changes since the last call to readQueue.
-   *
-   * <p>The "poll storage" subscribe option can be used to set the queue
-   * depth.
-   *
-   * @return Array of values; empty array if no new changes have been
-   *     published since the previous call.
-   */
-  {{ dotnet.ValueType }}[] ReadQueueValues();
+    /// <summary>
+    /// Get an array of all value changes since the last call to ReadQueue.
+    /// </summary>
+    /// <remarks>
+    /// The "poll storage" subscribe option can be used to set the queue depth.
+    /// </remarks
+    /// <returns>Array of values; emptry if no new changes</returns>
+    {{ dotnet.ValueType }}[] ReadQueueValues();
 }
