--- a/ntcore/src/generate/main/dotnet/Subscriber.cs.jinja
+++ b/ntcore/src/generate/main/dotnet/Subscriber.cs.jinja
@@ -29,7 +29,7 @@ public interface I{{ TypeName }}Subscriber : ISubscriber
     /// </summary>
     /// <param name="defaultValue">default value to return if no value has been published</param>
     /// <returns>value</returns>
-    {{ dotnet.ValueType }} Get({{ dotnet.ValueType }} defaultValue);
+    {{ dotnet.ValueType }} Get({{ dotnet.DefaultParamType }} defaultValue);
 
     /// <summary>
     /// Get the last published value along with its timestamp.
@@ -44,7 +44,7 @@ public interface I{{ TypeName }}Subscriber : ISubscriber
     /// </summary>
     /// <param name="defaultValue">default value to return if no value has been published</param>
     /// <returns>timestamped value</returns>
-    TimestampedObject<{{ dotnet.ValueType }}> GetAtomic({{ dotnet.ValueType }} defaultValue);
+    TimestampedObject<{{ dotnet.ValueType }}> GetAtomic({{ dotnet.DefaultParamType }} defaultValue);
 
     /// <summary>
     /// Get an array of all value changes since the last call to ReadQueue.
